chore: generate and verify token jwt
