# src/routes/router.js
@@ -1,35 +1,25 @@
-const express = require('express')
-const router = express.Router()
+const server = require('express')
+const router = server.Router()
 
-// Token JWT
-const { generateToken, verifyToken } = require('../middleware/jwtTokenMiddleware')
-const { authUser, authenticate } = require('../middleware/authMiddleware')
+const swaggerUi = require('swagger-ui-express')
+const swaggerDocument = require('../documentation/swagger.json')
 
-// Rota para gerar token JWT
-router.get('/api/generate-token', authUser, generateToken)
+router.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
-// Rota para verificar token JWT
-router.get('/api/verify-token', authenticate, verifyToken)
+const { authenticate } = require('../middleware/authenticate')
 
-// Rotas da aplicação API Monichat
+const { generateToken } = require('../middleware/generateToken')
+const { verifyToken } = require('../middleware/verifyToken')
+
+router.post('/api/generate-token', generateToken)
+router.post('/api/verify-token', verifyToken)
+
 const { allPacients } = require('../controller/allPacientsController')
 const { getPacient } = require('../controller/patientController')
 const { futureAppointments } = require('../controller/futureAppointmentsController')
 
-// Rota da API para obter todos os pacientes
 router.get('/api', authenticate, allPacients)
-
-// Rota da API para obter um paciente específico
 router.get('/api/pacient', authenticate, getPacient)
-
-// Rota da API para obter os próximos agendamentos de um paciente
-router.get('/api/patient/future-appointments', authenticate, futureAppointments)
-
-// Documentação Swagger OpenAPI
-const swaggerUi = require('swagger-ui-express')
-const swaggerDocument = require('../documentation/swagger.json')
-
-// Rota para acessar a documentação Swagger
-router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+router.get('/api/appointments', authenticate, futureAppointments)
 
 module.exports = router
